# semantic-search-app

./: .env.example  .env.test  .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: document_service.yml  gateway_service.yml  model_service.yml  search_service.yml  user-service.yml  user_service.yml
docs/: test.txt
docs/screenshots/: desktop.ini
frontend/: index.html
minikube/configmaps/: services-config.yml
minikube/deployments/: document-service.yml  gateway.yml  model-service.yml  qdrant.yml  search-service.yml
minikube/services/: document-service.yml  gateway.yml  model-service.yml  qdrant.yml  search-service.yml
minikube/volumes/: hf-cache-pvc.yml  qdrant-pvc.yml
scripts/ps1/: build.ps1  deploy.ps1  load-images.ps1  reset-minikube.ps1
scripts/sh/: build.sh  deploy.sh  load-images.sh  reset-minikube.sh
services/common/: pyproject.toml
services/common/common/: dependencies.py
services/common/common/core/: config.py
services/common/common/schemas/: internal.py
services/document_service/: Dockerfile  database.py  main.py  pyproject.toml  qdrant.py  requirements.txt
services/document_service/core/: config.py  processor.py
services/document_service/models/: document.py
services/document_service/repository/: postgres.py  vector.py
services/document_service/routers/: document.py
services/document_service/schemas/: document.py
services/document_service/tests/: conftest.py
services/document_service/tests/integration/: test_postgres.py  test_router_mock.py  test_vector.py
services/document_service/tests/unit/: test_processor.py
services/frontend/: index.html  jeff.txt  nginx.conf  test.txt  test2.txt
services/gateway_service/: Dockerfile  index.html  main.py  pyproject.toml  requirements.txt
services/gateway_service/core/: config.py  security.py
services/gateway_service/routers/: gateway.py
services/gateway_service/tests/: conftest.py
services/gateway_service/tests/unit/: test_internal.py  test_security.py
services/model_service/: Dockerfile  main.py  pyproject.toml  requirements.txt  requirements_heavy.txt
services/model_service/core/: config.py  processor.py
services/model_service/routers/: embed.py
services/model_service/tests/: conftest.py
services/model_service/tests/integration/: test_router_mock.py
services/model_service/tests/unit/: test_embed_request.py  test_processor.py
services/search_service/: Dockerfile  database.py  main.py  pyproject.toml  qdrant.py  requirements.txt
services/search_service/core/: config.py  processor.py
services/search_service/models/: search.py
services/search_service/repository/: postgres.py  vector.py
services/search_service/routers/: search.py
services/search_service/schemas/: search.py
services/search_service/tests/: conftest.py
services/search_service/tests/integration/: test_postgres.py  test_router_mock.py  test_vector.py
services/search_service/tests/unit/: test_processor.py
services/user_service/: Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
services/user_service/core/: config.py  security.py
services/user_service/models/: user.py
services/user_service/repository/: user.py
services/user_service/routers/: internal.py  user.py
services/user_service/schemas/: user.py
services/user_service/tests/: conftest.py
services/user_service/tests/integration/: test_auth_router.py  test_internal_router.py  test_repository.py  test_security.py  test_user_router.py
services/user_service/tests/unit/: test_security.py
