[project]
name = "semantic-search-app"
version = "0.2.0"
description = "Semantic search app powered by IBM Granite embedding models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "./services/common",
    "./services/model_service",
    "./services/document_service",
    "./services/search_service",
    "./services/gateway_service",
    "./services/user_service",
]