[project]
name = "semantic_search_app"
version = "0.2.0"
description = "Semantic search app powered by IBM Granite embedding models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "./services/common",
    "./services/model_service",
    "./services/document_service",
    "./services/search_service",
    "./services/gateway_service",
    "./services/user_service",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-httpx>=0.30",
    "pytest-dotenv>=0.5.2",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files    = [".env.test"]
testpaths    = [
    "services/user_service/tests",
    "services/gateway_service/tests",
    "services/model_service/tests",
]
pythonpath   = [
    "services/user_service",
    "services/gateway_service",
    "services/model_service",
]
#addopts      = "--tb=short -v"
#addopts     = "--tb=short -v -p no:cacheprovider"
addopts      = "--tb=short -v --cov --cov-report=term-missing -p no:cacheprovider"

[tool.coverage.run]
source = [
    "services",
]
omit   = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
show_missing  = true
skip_empty    = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
