[project]
name = "document_service"
version = "0.2.0"
description = "Service for getting access to document management features"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "qdrant-client",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "sqlmodel",
    "sqlalchemy",
    "asyncpg",
    "common",
]

[tool.uv.sources]
common = { workspace = true }
