[project]
name = "search-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "qdrant-client",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.33",
    "asyncpg>=0.31.0",
    "common",
]

[tool.uv.sources]
common = { workspace = true }
